solved problem with stretching the content

--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,7 @@ main {
     min-height: var(--current_section-content-size);
     width: 100%;
     display: flex;
+    flex-grow: 1;
 }
 
 #main-and-additional-info {
@@ -69,18 +70,21 @@ main {
     width: 75%;
     display: flex;
     flex-flow: column;
+    flex-grow: 1;
 }
 
 #main-window {
     background: blanchedalmond;
     min-height: var(--main-window-size);
     width: 100%;
+    flex-grow: 1;
 }
 
 #additional-info {
     background: greenyellow;
     min-height: var(--10th-size-section);
     width: 100%;
+    /*flex-grow: 1;*/
 }
 
 #other-content {
